[gd_scene load_steps=10 format=2]

[ext_resource path="res://Stages/Scattered.gd" type="Script" id=1]
[ext_resource path="res://Game/StageManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://Items/Maze.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/Words.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float w = 96;
uniform float h = 704;
uniform int random_times = 0;

float rand(vec2 co){
    return fract(sin(dot(co.xy ,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
    vec2 p = UV;
    for (int i = 0; i < random_times; i++) {
        float x = rand(UV);
        float y = rand(vec2(p.y, x));
        p = vec2(x, y);
    }
    COLOR = texture(TEXTURE, p);
}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/w = 96.0
shader_param/h = 704.0
shader_param/random_times = 0

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 480, 352 )

[node name="Scattered" type="Node2D"]
script = ExtResource( 1 )

[node name="StageManager" parent="." instance=ExtResource( 2 )]
goal_position = Vector2( 1088, 832 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1280, 960 )
own_world = true
transparent_bg = true
gui_disable_input = true

[node name="Maze" parent="Viewport" instance=ExtResource( 3 )]
tile_data = PoolIntArray( 262149, 13, 0, 262150, 14, 0, 262151, 1, 0, 262152, 10, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 10, 0, 262160, 10, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 327685, 0, 0, 327686, 3, 0, 327687, 1, 0, 327688, 8, 0, 327689, 4, 0, 327690, 14, 0, 327691, 1, 0, 327692, 4, 0, 327693, 14, 0, 327694, 10, 0, 327695, 5, 0, 327696, 6, 0, 327697, 12, 0, 327698, 3, 0, 327699, 12, 0, 393221, 0, 0, 393222, 6, 0, 393223, 10, 0, 393224, 12, 0, 393225, 11, 0, 393226, 13, 0, 393227, 14, 0, 393228, 8, 0, 393229, 10, 0, 393230, 5, 0, 393231, 3, 0, 393232, 1, 0, 393233, 4, 0, 393234, 6, 0, 393235, 4, 0, 458757, 0, 0, 458758, 3, 0, 458759, 5, 0, 458760, 14, 0, 458761, 10, 0, 458762, 9, 0, 458763, 3, 0, 458764, 4, 0, 458765, 6, 0, 458767, 8, 0, 458768, 4, 0, 458769, 6, 0, 458770, 4, 0, 458771, 7, 0, 524293, 0, 0, 524294, 7, 0, 524295, 1, 0, 524296, 12, 0, 524298, 6, 0, 524299, 9, 0, 524300, 6, 0, 524301, 10, 0, 524302, 10, 0, 524303, 1, 0, 524304, 8, 0, 524305, 4, 0, 524306, 0, 0, 524307, 6, 0, 589829, 0, 0, 589830, 6, 0, 589831, 1, 0, 589832, 10, 0, 589833, 5, 0, 589834, 13, 0, 589835, 0, 0, 589836, 14, 0, 589837, 5, 0, 589838, 11, 0, 589839, 3, 0, 589840, 1, 0, 589841, 5, 0, 589842, 0, 0, 589843, 3, 0, 655365, 7, 0, 655366, 10, 0, 655368, 9, 0, 655369, 14, 0, 655370, 8, 0, 655371, 5, 0, 655372, 3, 0, 655373, 12, 0, 655374, 14, 0, 655375, 5, 0, 655376, 3, 0, 655377, 4, 0, 655378, 0, 0, 655379, 0, 0, 720901, 0, 0, 720902, 7, 0, 720904, 8, 0, 720905, 1, 0, 720906, 10, 0, 720907, 10, 0, 720908, 5, 0, 720909, 14, 0, 720910, 4, 0, 720911, 3, 0, 720912, 5, 0, 720913, 6, 0, 720914, 9, 0, 720915, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 3, 0, 786440, 4, 0, 786442, 11, 0, 786443, 6, 0, 786444, 10, 0, 786445, 12, 0, 786446, 6, 0, 786447, 5, 0, 786448, 3, 0, 786449, 1, 0, 786450, 5, 0, 786451, 11, 0, 851973, 0, 0, 851974, 6, 0, 851975, 5, 0, 851977, 0, 0, 851978, 14, 0, 851979, 1, 0, 851980, 8, 0, 851981, 12, 0, 851982, 3, 0, 851983, 12, 0, 851984, 6, 0, 851985, 10, 0, 851986, 12, 0, 851987, 14, 0, 917509, 7, 0, 917510, 12, 0, 917511, 14, 0, 917512, 9, 0, 917513, 7, 0, 917514, 1, 0, 917515, 4, 0, 917516, 3, 0, 917517, 1, 0, 917518, 5, 0, 917519, 3, 0, 917520, 1, 0, 917521, 5, 0, 917522, 13, 0, 917523, 13, 0 )

[node name="Words" parent="." instance=ExtResource( 4 )]
position = Vector2( 30, 348 )
typing_speed = 20
TEXT = "The stars are
scattered all
over the
sky like
shimmering
tears, there
must be
great pain
in the eye
from which
they trickled."

[node name="Words2" parent="." instance=ExtResource( 4 )]
position = Vector2( 619.956, 103.634 )
TEXT = "Life is hard and it gets
worse and worse and worse."

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 2 )
position = Vector2( 319.688, 254.39 )
texture = SubResource( 3 )
centered = false
flip_v = true
region_enabled = true
region_rect = Rect2( 320, 0, 960, 704 )

[node name="Block" type="StaticBody2D" parent="."]
position = Vector2( 800, 608 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Block"]
shape = SubResource( 4 )

[node name="Stars" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 440, 70 )

[connection signal="started" from="StageManager" to="." method="_on_StageManager_started"]
[connection signal="typing_end" from="StageManager" to="." method="_on_StageManager_typing_end"]
